@@ -173,6 +173,7 @@ extern  double  cputfactor;
 extern double  wallfactor;
 extern  long     system_ncpus;
 extern  int      ignwalltime;
+extern  int      ignvmem;
 
 /*
 ** local functions
@@ -914,10 +915,10 @@ mom_set_limits(
       {
       reslim.rlim_cur = reslim.rlim_max = mem_limit;
 
-      if (setrlimit(RLIMIT_DATA, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_DATA, &reslim) < 0))
         return (error("RLIMIT_DATA", PBSE_SYSTEM));
 
-      if (setrlimit(RLIMIT_STACK, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_STACK, &reslim) < 0))
         return (error("RLIMIT_STACK", PBSE_SYSTEM));
       }
     }
@@ -1358,7 +1359,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num = mem_sum(pjob)) > value)
+      if ((ignvmem == 0) && ((num = mem_sum(pjob)) > value))
         {
         sprintf(log_buffer,
                 "vmem %lu exceeded limit %lu",
@@ -1373,14 +1374,14 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if (overmem_proc(pjob, value))
+      if ((ignvmem == 0) && (overmem_proc(pjob, value)))
         {
         sprintf(log_buffer,
                 "pvmem exceeded limit %lu", value);
         return (TRUE);
         }
       }
-    else if (ignwalltime == 0 && strcmp(pname, "walltime") == 0)
+    else if (strcmp(pname, "walltime") == 0)
       {
       if ((pjob->ji_qs.ji_svrflags & JOB_SVFLG_HERE) == 0)
         continue;
