@@ -178,6 +178,7 @@ extern double  wallfactor;
 extern  int     LOGLEVEL;
 extern  long    system_ncpus;
 extern  int     ignwalltime;
+extern  int     ignvmem;
 extern char   *ret_string;
 extern char    extra_parm[];
 extern char    no_parm[];
@@ -849,10 +850,10 @@ mom_set_limits(
       {
       reslim.rlim_cur = reslim.rlim_max = mem_limit;
 
-      if (setrlimit(RLIMIT_DATA, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_DATA, &reslim) < 0))
         return (error("RLIMIT_DATA", PBSE_SYSTEM));
 
-      if (setrlimit(RLIMIT_STACK, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_STACK, &reslim) < 0))
         return (error("RLIMIT_STACK", PBSE_SYSTEM));
       }
     }
@@ -1197,7 +1198,7 @@ int mom_over_limit(
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num = mem_sum(pjob)) > value)
+      if ((ignvmem == 0) && ((num = mem_sum(pjob)) > value))
         {
         sprintf(log_buffer, "vmem %lu exceeded limit %lu",
                 num, value);
@@ -1212,7 +1213,7 @@ int mom_over_limit(
       if (retval != PBSE_NONE)
         continue;
 
-      if (overmem_proc(pjob, value))
+      if ((ignvmem == 0) && (overmem_proc(pjob, value)))
         {
         sprintf(log_buffer, "pvmem exceeded limit %lu",
                 value);
