@@ -164,6 +164,7 @@ extern double cputfactor;
 extern double wallfactor;
 extern  long    system_ncpus;
 extern  int     ignwalltime;
+extern  int     ignvmem;
 
 /*
 ** local functions and data
@@ -738,7 +739,7 @@ mom_set_limits(
       {
       reslim.rlim_cur = reslim.rlim_max = mem_limit;
 
-      if (setrlimit(RLIMIT_VMEM, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_VMEM, &reslim) < 0))
         return (error("RLIMIT_VMEM", PBSE_SYSTEM));
       }
     }
@@ -954,7 +955,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num = mem_sum(pjob)) > value)
+      if ((ignvmem == 0) && ((num = mem_sum(pjob)) > value))
         {
         sprintf(log_buffer,
                 "vmem %lu exceeded limit %lu",
