@@ -174,6 +174,7 @@ extern double cputfactor;
 extern double wallfactor;
 extern  long    system_ncpus;
 extern  int     ignwalltime;
+extern  int     ignvmem;
 
 /*
 ** local functions and data
@@ -896,10 +897,10 @@ mom_set_limits(
       {
       reslim.rlim_cur = reslim.rlim_max = mem_limit;
 
-      if (setrlimit(RLIMIT_DATA, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_DATA, &reslim) < 0))
         return (error("RLIMIT_DATA", PBSE_SYSTEM));
 
-      if (setrlimit(RLIMIT_STACK, &reslim) < 0)
+      if ((ignvmem == 0) && (setrlimit(RLIMIT_STACK, &reslim) < 0))
         return (error("RLIMIT_STACK", PBSE_SYSTEM));
       }
     }
@@ -1042,7 +1043,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num = mem_sum(&pjob->ji_tasks)) > value)
+      if ((ignvmem == 0) && ((num = mem_sum(&pjob->ji_tasks)) > value))
         {
         sprintf(log_buffer,
                 "vmem %lu exceeded limit %lu",
@@ -1057,7 +1058,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if (overmem_proc(&pjob->ji_tasks, value))
+      if ((ignvmem == 0) && (overmem_proc(&pjob->ji_tasks, value)))
         {
         sprintf(log_buffer,
                 "pvmem exceeded limit %lu",
