@@ -203,6 +203,7 @@ extern double cputfactor;
 extern double wallfactor;
 extern  long    system_ncpus;
 extern  int     ignwalltime;
+extern  int     ignvmem;
 
 /*
 ** local functions and data
@@ -914,7 +915,7 @@ mom_set_limits(
       {
       res64lim.rlim_cur = res64lim.rlim_max = mem_limit;
 
-      if (setrlimit64(RLIMIT_VMEM, &res64lim) < 0)
+      if ((ignvmem == 0) && (setrlimit64(RLIMIT_VMEM, &res64lim) < 0))
         return (error("RLIMIT_VMEM", PBSE_SYSTEM));
       }
     }
@@ -1211,7 +1212,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num64 = mem_sum(&pjob->ji_tasks)) > sizeval)
+      if ((ignvmem == 0) && ((num64 = mem_sum(&pjob->ji_tasks)) > sizeval))
         {
         sprintf(log_buffer,
                 "vmem %llu exceeded limit %llu",
@@ -1226,7 +1227,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if (overmem_proc(&pjob->ji_tasks, sizeval))
+      if ((ignvmem == 0) && (overmem_proc(&pjob->ji_tasks, sizeval)))
         {
         sprintf(log_buffer,
                 "pvmem exceeded limit %llukb", sizeval);
