@@ -162,6 +162,7 @@ extern double cputfactor;
 extern double wallfactor;
 /* wow, no ncpus - extern  long    system_ncpus; */
 extern  int     ignwalltime;
+extern  int     ignvmem;
 
 /*
 ** local functions
@@ -693,10 +694,10 @@ mom_set_limits(
 
         reslim.rlim_cur = reslim.rlim_max = value;
 
-        if (setrlimit(RLIMIT_DATA, &reslim) < 0)
+        if ((ignvmem == 0) && (setrlimit(RLIMIT_DATA, &reslim) < 0))
           return (error("RLIMIT_DATA", PBSE_SYSTEM));
 
-        if (setrlimit(RLIMIT_STACK, &reslim) < 0)
+        if ((ignvmem == 0) && (setrlimit(RLIMIT_STACK, &reslim) < 0))
           return (error("RLIMIT_STACK", PBSE_SYSTEM));
         }
       }
@@ -988,7 +989,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if ((num = mem_sum(pjob)) > value)
+      if ((ignvmem == 0) && ((num = mem_sum(pjob)) > value))
         {
         sprintf(log_buffer,
                 "vmem %lu exceeded limit %lu",
@@ -1003,7 +1004,7 @@ mom_over_limit(job *pjob)
       if (retval != PBSE_NONE)
         continue;
 
-      if (overmem_proc(pjob, value))
+      if ((ignvmem == 0) && (overmem_proc(pjob, value)))
         {
         sprintf(log_buffer, "pvmem exceeded limit %lu",
                 value);
