@@ -39,6 +39,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       from server, also only try to send hello when the server stream is down.
   b - change pbs_server so log_file_max_size of zero behavior matches documentation
   e - added periodic logging of version and loglevel to help in support
+  e - added pbs_mom config option ignvmem to ignore vmem/pvmem limit enforcement
 
 2.3.4
   c - fixed segfault when loading array files of an older/incompatible version
